--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-  <iframe onload="loadFrame()" src="{{src}}?source=240" width="640" height="480" frameborder="0" allowfullscreen></iframe>
+  <iframe src="{{src}}?source=240" width="640" height="480" frameborder="0" allowfullscreen></iframe>
 </body>
 </html>
