--- a/static/index.html
+++ b/static/index.html
@@ -16,7 +16,7 @@
         setTimeout(() => {
           window.close()
         }, 13_0000)
-      } catch() {
+      } catch {
         window.close();
       }
     });
