--- a/static/index.html
+++ b/static/index.html
@@ -8,13 +8,14 @@
 <body>
   <iframe id="frame" src="{{src}}?source=240" width="640" height="480" frameborder="0" allowfullscreen></iframe>
   <script>
-    document.addEventListener('DOMContentLoaded', () => {
+   document.addEventListener('DOMContentLoaded', () => {
   const frame = document.querySelector("#frame");
   if (!frame) window.close();
   let video = null;
 
-  setInterval(() => {
+  const interval = setInterval(() => {
     video = frame?.contentWindow?.document?.querySelector("video");
+    clearInterval(interval);
     if (video) {
       video?.play();
       setTimeout(() => {
